#39 Run tunnel script in verbose mode

--- a/.github/workflows/reverse-ssh-tunnel.yml
+++ b/.github/workflows/reverse-ssh-tunnel.yml
@@ -15,4 +15,4 @@ jobs:
           REVERSE_SSH_PUBLIC_KEY: ${{ secrets.REVERSE_SSH_PUBLIC_KEY }}
         run: |
           id -a
-          ./reverse-ssh-tunnel.sh
+          bash -vx ./reverse-ssh-tunnel.sh
